<resources>


    <string name="app_name">KidWise</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="firstName_hint">Enter your first name</string>
    <string name="lastName_hint">Enter your last name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">first Name</string>
    <string name="learning">Learning</string>
    <string name="playing">Playing</string>
    <string name="hello">Hello</string>
    <string name="read_clocks">Read Clocks</string>
    <string name="learn_seasons">Learn Seasons</string>
    <string name="count_days_of_the_week">Count Days of the Week</string>
    <string name="count_months_of_the_year">Count Months of the Year</string>
    <string name="digit_memory_game">Digit Memory Game</string>
    <string name="word_spelling_game">Word Spelling Game</string>
    <string name="follow_directions">Follow Directions</string>
    <string name="multiplication_practice">Multiplication Practice</string>
    <string name="find_similar_pictures">Find Similar Pictures</string>
    <string name="follow_the_object">Follow the Object</string>
    <string name="digital_clock">Digital Clock</string>
    <string name="what_time_is_it">What time is it ?</string>
    <string name="next">Next</string>
    <string name="enter_the_hour_and_minutes">Enter the hour and minutes</string>
    <string name="end_of_questions">End of questions!</string>
    <string name="try_again">Try Again</string>
    <string name="_00_00_am">00:00 AM</string>
    <string name="enter_the_time_hh_mm_am_pm">Enter the time (hh:mm AM/PM)</string>
    <string name="correct_answer" />
    <string name="enter_answer">Enter answer</string>
    <string name="drag_and_drop_instruction">Drag and drop the days of the week into the correct order.</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="instruction_month">Click on the months to arrange them at the bottom in the correct order.</string>
    <string name="instruction_day">Click on the days to arrange them at the bottom in the correct order.</string>
    <string name="congratulation">Congratulation</string>
    <string name="go_to_home">Go to Home</string>
    <string name="reset">Reset</string>


</resources>