<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".redirect.LearningActivity">

    <Button
        android:id="@+id/clockButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_clocks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <Button
        android:id="@+id/seasonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn_seasons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clockButton"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/daysOfWeekButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_days_of_the_week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seasonButton"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/monthsOfYearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_months_of_the_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daysOfWeekButton"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/digitMemoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digit_memory_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monthsOfYearButton"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/wordSpellButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word_spelling_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/digitMemoryButton"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/directionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow_directions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wordSpellButton"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/multiplicationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplication_practice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/directionsButton"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/similarPicturesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_similar_pictures"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/multiplicationButton"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/followObjectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/follow_the_object"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/similarPicturesButton"
        app:layout_constraintVertical_bias="0.071" />
</androidx.constraintlayout.widget.ConstraintLayout>