<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".redirect.HomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="71dp"
        android:layout_height="26dp"
        android:layout_marginTop="292dp"
        android:text="@string/hello"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/firstNameTextView"
        android:layout_width="86dp"
        android:layout_height="27dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="128dp"
        android:text="@string/first_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/learning"
        android:layout_width="135dp"
        android:layout_height="64dp"
        android:text="@string/learning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playing"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="88dp"
        android:text="@string/playing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/learning" />




</androidx.constraintlayout.widget.ConstraintLayout>